# tabe

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: .readthedocs.yaml  api.md  conf.py  environment.yml  index.md
src/tabe/: _version.py  l1tf.py  loess.py  utils.py  whittaker.py
tests/: conftest.py  test_version.py
